changes to html five day div

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 </div>
             </div>
 <!--five day forecast-->
-            <div class="col-8-float-right mt-4">
-                <h3 class="row">Five Day Forecast</h3>
-                <div id="forecast-five"></div>
-                <div id="fiveday-container" class="five-day-list"></div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-4 col-xl-3">
+                        <h2 class='subtitle'>Five Day Forecast</h2>
+                        <div id="fiveday-container" class="five-day-list"></div>
             </div>
         </section>
     </main>    
