--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="container">
                 <h1 class="header">Weather</h1>
             </div>
+            <p id="currentDate" class="lead"></p>    
         </div>
 <!--search-responsive-->
     <main>
@@ -58,6 +59,11 @@
         </section>
     </main>    
     </body>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"></script>
+
+    <script src="assets\script.js"></script>
 </body>
 </html>
