--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="col-12 col-md-4 col-xl-3">
                         <h4 class='subtitle'>Five Day Forecast</h4>
-                        <div id="fiveday-container" class="five-day-list"></div>
+                        <div id="forecast-container" class="five-day-list"></div>
             </div>
         </section>
     </main>    
