--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <div class="container">
           <h1 class="header">Weather</h1>
         </div>
-        <p id="currentDate" class="lead"></p>
+        <p id="#currentCity" class="lead"></p>
+        <p id="#currentIcon" class="lead"></p>
+        <p id="#currentTemp" class="lead"></p>
+        <p id="#currentWind" class="lead"></p>
+        <p id="#currentHumidity" class="lead"></p>
+        <p id="#currentUvi" class="lead"></p>
       </div>
       <!--search-responsive-->
       <main>
