--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
               <div class="col-12 col-md-4 col-xl-3">
                 <h3 class="subtitle">Current Weather</h3>
                 <div id="weather" class="current-weather"></div>
-                <p id="#currentCity" class="lead"></p>
-                <p id="#currentIcon" class="lead"></p>
-                <p id="#currentTemp" class="lead"></p>
-                <p id="#currentWind" class="lead"></p>
-                <p id="#currentHumidity" class="lead"></p>
-                <p id="#currentUvi" class="lead"></p>
+                <p id="currentCity" class="lead"></p>
+                <img id="currentIcon" class="lead">
+                <p id="currentTemp" class="lead"></p>
+                <p id="currentWind" class="lead"></p>
+                <p id="currentHumidity" class="lead"></p>
+                <p id="currentUvi" class="lead"></p>
               </div>
             </div>
           </div>
@@ -84,17 +84,14 @@
           <div class="col-8-float-right mt-4">
             <h2 class="row">Five Day Weather:</h2>
             <div id="five-day"></div>
-            <div id="forecast-container" class="five-day-list-group"></div>
+            <div id="forecast" class="five-day-list-group"></div>
           </div>
         </section>
       </main>
     </body>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-
-    <script src="assets\script.js"></script>
+    
+    <script src="assets/script.js"></script>
   </body>
 </html>
