--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   </head>
   <body>
     <body class="flex-column min-100-vh">
-      <div class="jumbotron bg-medium text-blue text-center">
+      <div class="jumbotron bg-large text-black text-center">
         <div class="container">
-          <h1 class="header">Weather</h1>
+          <h1 class="header">Weather Planner</h1>
+          <h2 class="header">Five Day Forecast</h2>
         </div>
         
       </div>
@@ -66,7 +67,7 @@
           <!--current weather-responsive-->
           <div class="container-fluid">
             <div class="row">
-              <div class="col-12 col-md-4 col-xl-3">
+              <div class="current-weather-container">
                 <h3 class="subtitle">Current Weather</h3>
                 <div id="weather" class="current-weather"></div>
                 <p id="currentCity" class="lead"></p>
