updates to jumbotron and js

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <body class="flex-column min-100-vh">
-      <div class="jumbotron bg-large text-black text-center">
+      <div class="jumbotron mt-5 p-5 bg-primary text-black rounded">
         <div class="container">
           <h1 class="header">Weather Planner</h1>
           <h2 class="header">Five Day Forecast</h2>
